# weav-provider-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROVIDERS.md  PROVIDER_ANALYSIS.md  PUBLISHING.md  QUICKSTART.md  QUICK_PUBLISH_SETUP.md  README.md  __init__.py  api.py  providers.py  pyproject.toml
.github/workflows/: codeql.yml  publish.yml  test.yml
adapters/: anthropic.py  deepseek.py  google.py  ollama.py  openai.py  qwen.py  zhipu.py
doc/: docusaurus.config.js
doc/src/pages/: index.md
scripts/: bump_version.py
tests/: __init__.py  conftest.py  test_api.py  test_functional.py  test_integration.py  test_openai_adapter.py  test_providers.py
weav_provider_router/: __init__.py  api.py  base.py  providers.py
weav_provider_router/adapters/: __init__.py  anthropic.py  baidu.py  bytedance.py  cohere.py  deepseek.py  google.py  groq.py  minimax.py  mistral.py  moonshot.py  nvidia.py  openai.py  openai_embedding.py  openai_image.py  qwen.py  together.py  zhipu.py
